<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/GPSstatus"
        android:layout_width="fill_parent"
        android:layout_height="18dp"
        android:background="@color/red"
        android:gravity="center|center_vertical"
        android:text="@string/GPSoff"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/divider"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/GPSstatus"
        android:background="@color/black" />

    <LinearLayout
        android:id="@+id/stats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:showDividers="middle" >

        <LinearLayout
            android:id="@+id/column1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:gravity="left"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/pace"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/blue2"
                android:gravity="center"
                android:text="@string/pace"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/paceField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="12dp"
                android:hint="@string/zeroPace"
                android:text="@string/zeroPace"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/c1Divider"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/time"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/blue2"
                android:gravity="center"
                android:text="@string/time"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Chronometer
                android:id="@+id/timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="12dp"
                android:format="%s:%s"
                android:gravity="center"
                android:textSize="15sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <Button
                android:id="@+id/startButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/start" />

        </LinearLayout>

        <TextView
            android:id="@+id/columnDivider"
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="@color/black" />

        <LinearLayout
            android:id="@+id/column2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/speed"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/blue2"
                android:gravity="center"
                android:text="@string/speed"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/speedField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="12dp"
                android:hint="@string/zeroSpeed"
                android:text="@string/zeroSpeed"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/c2Divider"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/distance"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/blue2"
                android:gravity="center"
                android:text="@string/distance"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/distanceField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/zeroDistance"
                android:textColor="@color/black"
                android:textSize="15sp" />
            
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <Button
                android:id="@+id/stopButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/stop" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/mapDivider"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/stats"
        android:background="@color/black" />

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="248dp"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/mapDivider"
        class="com.google.android.gms.maps.MapFragment" />

</RelativeLayout>